tests/snapshots/formats__luks__cryptsetup-luks1.img.raw.zst.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ cryptsetup-luks1.img.raw — LUKS1 encrypted volume, aes-cbc-essiv:sha256 (256-bit key), sha256, 2 of 8 key slots active  [0x0+0x201000]
  ▾ Header — UUID 11111111-2222-4333-8444-555555555555  [0x0+0xd0]
      Magic: 4c 55 4b 53 ba be  |LUKS..|  [0x0+0x6]
      Version: 1  [0x6+0x2]
      Cipher name: "aes"  [0x8+0x20]
      Cipher mode: "cbc-essiv:sha256"  [0x28+0x20]
      Hash specification: "sha256"  [0x48+0x20]
      Payload offset (sectors): 4096 — at 0x200000  [0x68+0x4]
      Master key length (bytes): 32 — 256 bits  [0x6c+0x4]
      Master key digest: 99 3b 17 4b b7 17 a0 50 22 fa 55 d3 3f bd ce 80 …  |.;.K...P".U.?...|  [0x70+0x14]
      Master key digest salt: a9 37 af 24 75 fc 89 b8 26 21 c5 26 03 6c 34 29 …  |.7.$u...&!.&.l4)|  [0x84+0x20]
      Master key digest iterations: 1337462  [0xa4+0x4]
      UUID: "11111111-2222-4333-8444-555555555555"  [0xa8+0x28]
  ▾ Key slots — 2 active  [0xd0+0x180]
    ▾ Key slot 0 — enabled, 107134 PBKDF2 iterations, 125 KiB of AF-split key material (4000 stripes)  [0xd0+0x30] → 0x1000+0x1f400
        State: enabled (0xac71f3)  [0xd0+0x4]
        PBKDF2 iterations: 107134  [0xd4+0x4]
        Salt: 5e 0b f7 f4 3c db 1e 6b ec b1 eb 9d 61 14 f2 16 …  |^...<..k....a...|  [0xd8+0x20]
        Key material offset (sectors): 8 — at 0x1000  [0xf8+0x4]
        Anti-forensic stripes: 4000  [0xfc+0x4]
    ▾ Key slot 1 — enabled, 109798 PBKDF2 iterations, 125 KiB of AF-split key material (4000 stripes)  [0x100+0x30] → 0x21000+0x1f400
        State: enabled (0xac71f3)  [0x100+0x4]
        PBKDF2 iterations: 109798  [0x104+0x4]
        Salt: 04 32 1d 32 95 f0 3d ad 6f a6 76 51 3a b6 b1 54 …  |.2.2..=.o.vQ:..T|  [0x108+0x20]
        Key material offset (sectors): 264 — at 0x21000  [0x128+0x4]
        Anti-forensic stripes: 4000  [0x12c+0x4]
    ▾ Key slot 2 — disabled  [0x130+0x30]
        State: disabled (0xdead)  [0x130+0x4]
        PBKDF2 iterations: 0  [0x134+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x138+0x20]
        Key material offset (sectors): 520 — at 0x41000  [0x158+0x4]
        Anti-forensic stripes: 4000  [0x15c+0x4]
    ▾ Key slot 3 — disabled  [0x160+0x30]
        State: disabled (0xdead)  [0x160+0x4]
        PBKDF2 iterations: 0  [0x164+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x168+0x20]
        Key material offset (sectors): 776 — at 0x61000  [0x188+0x4]
        Anti-forensic stripes: 4000  [0x18c+0x4]
    ▾ Key slot 4 — disabled  [0x190+0x30]
        State: disabled (0xdead)  [0x190+0x4]
        PBKDF2 iterations: 0  [0x194+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x198+0x20]
        Key material offset (sectors): 1032 — at 0x81000  [0x1b8+0x4]
        Anti-forensic stripes: 4000  [0x1bc+0x4]
    ▾ Key slot 5 — disabled  [0x1c0+0x30]
        State: disabled (0xdead)  [0x1c0+0x4]
        PBKDF2 iterations: 0  [0x1c4+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1c8+0x20]
        Key material offset (sectors): 1288 — at 0xa1000  [0x1e8+0x4]
        Anti-forensic stripes: 4000  [0x1ec+0x4]
    ▾ Key slot 6 — disabled  [0x1f0+0x30]
        State: disabled (0xdead)  [0x1f0+0x4]
        PBKDF2 iterations: 0  [0x1f4+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1f8+0x20]
        Key material offset (sectors): 1544 — at 0xc1000  [0x218+0x4]
        Anti-forensic stripes: 4000  [0x21c+0x4]
    ▾ Key slot 7 — disabled  [0x220+0x30]
        State: disabled (0xdead)  [0x220+0x4]
        PBKDF2 iterations: 0  [0x224+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x228+0x20]
        Key material offset (sectors): 1800 — at 0xe1000  [0x248+0x4]
        Anti-forensic stripes: 4000  [0x24c+0x4]
  ▾ Volume layout — header, key material and payload  [0x0+0x201000]
      Header — 208 bytes  [0x0+0xd0]
      Key slots — 384 bytes  [0xd0+0x180]
      Unused — 3.4 KiB, not used by the header or key slots  [0x250+0xdb0]
      Key material — 125 KiB  [0x1000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0x20400+0xc00]
      Key material — 125 KiB  [0x21000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0x40400+0xc00]
      Key material (disabled slot) — 125 KiB  [0x41000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0x60400+0xc00]
      Key material (disabled slot) — 125 KiB  [0x61000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0x80400+0xc00]
      Key material (disabled slot) — 125 KiB  [0x81000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0xa0400+0xc00]
      Key material (disabled slot) — 125 KiB  [0xa1000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0xc0400+0xc00]
      Key material (disabled slot) — 125 KiB  [0xc1000+0x1f400]
      Unused — 3 KiB, not used by the header or key slots  [0xe0400+0xc00]
      Key material (disabled slot) — 125 KiB  [0xe1000+0x1f400]
      Unused — 1023 KiB, not used by the header or key slots  [0x100400+0xffc00]
      Encrypted payload — 4 KiB  [0x200000+0x1000]
    Encrypted payload — 4 KiB of aes-cbc-essiv:sha256  [0x200000+0x1000]
