tests/snapshots/formats__luks__cryptsetup-luks2.img.raw.zst.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ cryptsetup-luks2.img.raw — LUKS2 encrypted volume "fillyfoal", aes-xts-plain64, 2 keyslots, 1 token, UUID 66666666-7777-4888-8999-aaaaaaaaaaaa  [0x0+0x101000]
  ▾ Binary header — sequence 6, 16 KiB with the JSON area  [0x0+0x1000]
      Magic: 4c 55 4b 53 ba be  |LUKS..|  [0x0+0x6]
      Version: 2  [0x6+0x2]
      Header size (binary + JSON): 16384 — 16 KiB  [0x8+0x8]
      Sequence id: 6  [0x10+0x8]
      Label: "fillyfoal"  [0x18+0x30]
      Checksum algorithm: "sha256"  [0x48+0x20]
      Salt: 38 ae 38 e0 c9 d7 60 66 49 d7 70 80 2d 6d 78 b9 …  |8.8...`fI.p.-mx.|  [0x68+0x40]
      UUID: "66666666-7777-4888-8999-aaaaaaaaaaaa"  [0xa8+0x28]
      Subsystem: "test"  [0xd0+0x30]
      Header offset: 0 — 0x0 from the start of the device  [0x100+0x8]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x108+0xb8]
      Checksum: d5 59 b5 37 14 97 8f 68 f9 c0 8b 6e fd 70 49 91 …  |.Y.7...h...n.pI.|  [0x1c0+0x40]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x200+0xe00]
  ▾ JSON metadata — JSON object, 5 members  [0x1000+0x452]
    ▾ keyslots — object, 2 members  [0x100c+0x265]
      ▾ 0 — object, 5 members  [0x1011+0x125]
          type: "luks2"  [0x1019+0x7]
          key_size: 64  [0x102c+0x2]
        ▾ af — object, 3 members  [0x1034+0x2f]
            type: "luks1"  [0x103c+0x7]
            stripes: 4000  [0x104e+0x4]
            hash: "sha256"  [0x105a+0x8]
        ▾ area — object, 5 members  [0x106b+0x5c]
            type: "raw"  [0x1073+0x5]
            offset: "32768"  [0x1082+0x7]
            size: "258048"  [0x1091+0x8]
            encryption: "aes-xts-plain64"  [0x10a7+0x11]
            key_size: 64  [0x10c4+0x2]
        ▾ kdf — object, 5 members  [0x10ce+0x67]
            type: "argon2id"  [0x10d6+0xa]
            time: 4  [0x10e8+0x1]
            memory: 32  [0x10f3+0x2]
            cpus: 4  [0x10fd+0x1]
            salt: "D2oViYoKRCjfSP3NQckp8VOcGN5uj7zPM3FbbsekZs8="  [0x1106+0x2e]
      ▾ 1 — object, 6 members  [0x113b+0x135]
          type: "luks2"  [0x1143+0x7]
          key_size: 64  [0x1156+0x2]
        ▾ af — object, 3 members  [0x115e+0x2f]
            type: "luks1"  [0x1166+0x7]
            stripes: 4000  [0x1178+0x4]
            hash: "sha256"  [0x1184+0x8]
        ▾ area — object, 5 members  [0x1195+0x5d]
            type: "raw"  [0x119d+0x5]
            offset: "290816"  [0x11ac+0x8]
            size: "258048"  [0x11bc+0x8]
            encryption: "aes-xts-plain64"  [0x11d2+0x11]
            key_size: 64  [0x11ef+0x2]
        ▾ kdf — object, 4 members  [0x11f9+0x69]
            type: "pbkdf2"  [0x1201+0x8]
            hash: "sha256"  [0x1211+0x8]
            iterations: 1000  [0x1227+0x4]
            salt: "ZwJBsesLF1a/0IR344ZGtjo7JvAfpFtxjSgr2UC4N1k="  [0x1233+0x2e]
          priority: 2  [0x126e+0x1]
    ▾ tokens — object, 1 member  [0x127b+0x3f]
      ▾ 0 — object, 3 members  [0x1280+0x39]
          type: "fillyfoal-token"  [0x1288+0x11]
        ▾ keyslots — array, 1 element  [0x12a5+0x5]
            [0]: "1"  [0x12a6+0x3]
          note: "test"  [0x12b2+0x6]
    ▾ segments — object, 1 member  [0x12c6+0x7b]
      ▾ 0 — object, 6 members  [0x12cb+0x75]
          type: "crypt"  [0x12d3+0x7]
          offset: "1048576"  [0x12e4+0x9]
          size: "dynamic"  [0x12f5+0x9]
          iv_tweak: "0"  [0x130a+0x3]
          encryption: "aes-xts-plain64"  [0x131b+0x11]
          sector_size: 4096  [0x133b+0x4]
    ▾ digests — object, 1 member  [0x134c+0xcd]
      ▾ 0 — object, 7 members  [0x1351+0xc7]
          type: "pbkdf2"  [0x1359+0x8]
        ▾ keyslots — array, 2 elements  [0x136d+0x9]
            [0]: "0"  [0x136e+0x3]
            [1]: "1"  [0x1372+0x3]
        ▾ segments — array, 1 element  [0x1382+0x5]
            [0]: "0"  [0x1383+0x3]
          hash: "sha256"  [0x138f+0x8]
          iterations: 1000  [0x13a5+0x4]
          salt: "8c9ZBrkmCm6ml91Zwp1D85Wo97KRyWqRrP3NrY89EYM="  [0x13b1+0x2e]
          digest: "dTBsiA2WdoKhzRCI80eL+jnpxssaPxWB6VWonX5jnCk="  [0x13e9+0x2e]
    ▾ config — object, 2 members  [0x1423+0x2e]
        json_size: "12288"  [0x1430+0x7]
        keyslots_size: "524288"  [0x1448+0x8]
    JSON area padding — 10.9 KiB  [0x1452+0x2bae]
  ▾ Secondary binary header — sequence 6, 16 KiB with the JSON area  [0x4000+0x1000]
      Magic: 53 4b 55 4c ba be  |SKUL..|  [0x4000+0x6]
      Version: 2  [0x4006+0x2]
      Header size (binary + JSON): 16384 — 16 KiB  [0x4008+0x8]
      Sequence id: 6  [0x4010+0x8]
      Label: "fillyfoal"  [0x4018+0x30]
      Checksum algorithm: "sha256"  [0x4048+0x20]
      Salt: 06 90 51 b4 de 94 f7 23 66 07 fb c2 5e dc 74 15 …  |..Q....#f...^.t.|  [0x4068+0x40]
      UUID: "66666666-7777-4888-8999-aaaaaaaaaaaa"  [0x40a8+0x28]
      Subsystem: "test"  [0x40d0+0x30]
      Header offset: 16384 — 0x4000 from the start of the device  [0x4100+0x8]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4108+0xb8]
      Checksum: c9 c6 74 78 e9 0b 84 88 3e 40 50 62 5a 6a 4b 33 …  |..tx....>@PbZjK3|  [0x41c0+0x40]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4200+0xe00]
  ▾ Secondary JSON metadata — JSON object, 5 members  [0x5000+0x452]
    ▾ keyslots — object, 2 members  [0x500c+0x265]
      ▾ 0 — object, 5 members  [0x5011+0x125]
          type: "luks2"  [0x5019+0x7]
          key_size: 64  [0x502c+0x2]
        ▾ af — object, 3 members  [0x5034+0x2f]
            type: "luks1"  [0x503c+0x7]
            stripes: 4000  [0x504e+0x4]
            hash: "sha256"  [0x505a+0x8]
        ▾ area — object, 5 members  [0x506b+0x5c]
            type: "raw"  [0x5073+0x5]
            offset: "32768"  [0x5082+0x7]
            size: "258048"  [0x5091+0x8]
            encryption: "aes-xts-plain64"  [0x50a7+0x11]
            key_size: 64  [0x50c4+0x2]
        ▾ kdf — object, 5 members  [0x50ce+0x67]
            type: "argon2id"  [0x50d6+0xa]
            time: 4  [0x50e8+0x1]
            memory: 32  [0x50f3+0x2]
            cpus: 4  [0x50fd+0x1]
            salt: "D2oViYoKRCjfSP3NQckp8VOcGN5uj7zPM3FbbsekZs8="  [0x5106+0x2e]
      ▾ 1 — object, 6 members  [0x513b+0x135]
          type: "luks2"  [0x5143+0x7]
          key_size: 64  [0x5156+0x2]
        ▾ af — object, 3 members  [0x515e+0x2f]
            type: "luks1"  [0x5166+0x7]
            stripes: 4000  [0x5178+0x4]
            hash: "sha256"  [0x5184+0x8]
        ▾ area — object, 5 members  [0x5195+0x5d]
            type: "raw"  [0x519d+0x5]
            offset: "290816"  [0x51ac+0x8]
            size: "258048"  [0x51bc+0x8]
            encryption: "aes-xts-plain64"  [0x51d2+0x11]
            key_size: 64  [0x51ef+0x2]
        ▾ kdf — object, 4 members  [0x51f9+0x69]
            type: "pbkdf2"  [0x5201+0x8]
            hash: "sha256"  [0x5211+0x8]
            iterations: 1000  [0x5227+0x4]
            salt: "ZwJBsesLF1a/0IR344ZGtjo7JvAfpFtxjSgr2UC4N1k="  [0x5233+0x2e]
          priority: 2  [0x526e+0x1]
    ▾ tokens — object, 1 member  [0x527b+0x3f]
      ▾ 0 — object, 3 members  [0x5280+0x39]
          type: "fillyfoal-token"  [0x5288+0x11]
        ▾ keyslots — array, 1 element  [0x52a5+0x5]
            [0]: "1"  [0x52a6+0x3]
          note: "test"  [0x52b2+0x6]
    ▾ segments — object, 1 member  [0x52c6+0x7b]
      ▾ 0 — object, 6 members  [0x52cb+0x75]
          type: "crypt"  [0x52d3+0x7]
          offset: "1048576"  [0x52e4+0x9]
          size: "dynamic"  [0x52f5+0x9]
          iv_tweak: "0"  [0x530a+0x3]
          encryption: "aes-xts-plain64"  [0x531b+0x11]
          sector_size: 4096  [0x533b+0x4]
    ▾ digests — object, 1 member  [0x534c+0xcd]
      ▾ 0 — object, 7 members  [0x5351+0xc7]
          type: "pbkdf2"  [0x5359+0x8]
        ▾ keyslots — array, 2 elements  [0x536d+0x9]
            [0]: "0"  [0x536e+0x3]
            [1]: "1"  [0x5372+0x3]
        ▾ segments — array, 1 element  [0x5382+0x5]
            [0]: "0"  [0x5383+0x3]
          hash: "sha256"  [0x538f+0x8]
          iterations: 1000  [0x53a5+0x4]
          salt: "8c9ZBrkmCm6ml91Zwp1D85Wo97KRyWqRrP3NrY89EYM="  [0x53b1+0x2e]
          digest: "dTBsiA2WdoKhzRCI80eL+jnpxssaPxWB6VWonX5jnCk="  [0x53e9+0x2e]
    ▾ config — object, 2 members  [0x5423+0x2e]
        json_size: "12288"  [0x5430+0x7]
        keyslots_size: "524288"  [0x5448+0x8]
    Secondary JSON area padding — 10.9 KiB  [0x5452+0x2bae]
  ▾ Keyslots area — 2 keyslots in 512 KiB  [0x8000+0x80000]
    ▾ Keyslot 0 — 512-bit key, argon2id, AF 4000 stripes, area encrypted with aes-xts-plain64  [0x8000+0x3f000]
        AF-split key material — 250 KiB, encrypted  [0x8000+0x3e800]
        Unused — 2 KiB  [0x46800+0x800]
    ▾ Keyslot 1 — 512-bit key, pbkdf2, AF 4000 stripes, area encrypted with aes-xts-plain64, preferred  [0x47000+0x3f000]
        AF-split key material — 250 KiB, encrypted  [0x47000+0x3e800]
        Unused — 2 KiB  [0x85800+0x800]
      Unused — 8 KiB of free keyslot space  [0x86000+0x2000]
    Unused — between the keyslots area and the data  [0x88000+0x78000]
    Encrypted payload — 4 KiB at 0x100000, aes-xts-plain64, 4096-byte sectors  [0x100000+0x1000]
