tests/snapshots/formats__luks__luks1.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ luks1.img — LUKS1 encrypted volume, aes-xts-plain64 (512-bit key), sha256, 1 of 8 key slots active  [0x0+0x1400]
  ▾ Header — UUID 5f3c2a1e-7b6d-4c8e-9a0b-1c2d3e4f5a6b  [0x0+0xd0]
      Magic: 4c 55 4b 53 ba be  |LUKS..|  [0x0+0x6]
      Version: 1  [0x6+0x2]
      Cipher name: "aes"  [0x8+0x20]
      Cipher mode: "xts-plain64"  [0x28+0x20]
      Hash specification: "sha256"  [0x48+0x20]
      Payload offset (sectors): 8 — at 0x1000  [0x68+0x4]
      Master key length (bytes): 64 — 512 bits  [0x6c+0x4]
      Master key digest: 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f …  |................|  [0x70+0x14]
      Master key digest salt: 20 21 22 23 24 25 26 27 28 29 2a 2b 2c 2d 2e 2f …  | !"#$%&'()*+,-./|  [0x84+0x20]
      Master key digest iterations: 117000  [0xa4+0x4]
      UUID: "5f3c2a1e-7b6d-4c8e-9a0b-1c2d3e4f5a6b"  [0xa8+0x28]
  ▾ Key slots — 1 active  [0xd0+0x180]
    ▾ Key slot 0 — enabled, 2000000 PBKDF2 iterations, 4.5 KiB of AF-split key material (4000 stripes)  [0xd0+0x30] → 0x200+0x1200
        State: enabled (0xac71f3)  [0xd0+0x4]
        PBKDF2 iterations: 2000000  [0xd4+0x4]
        Salt: 64 65 66 67 68 69 6a 6b 6c 6d 6e 6f 70 71 72 73 …  |defghijklmnopqrs|  [0xd8+0x20]
        Key material offset (sectors): 1 — at 0x200  [0xf8+0x4]
        Anti-forensic stripes: 4000  [0xfc+0x4]
    ▾ Key slot 1 — disabled  [0x100+0x30]
        State: disabled (0xdead)  [0x100+0x4]
        PBKDF2 iterations: 0  [0x104+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x108+0x20]
        Key material offset (sectors): 501 — at 0x3ea00  [0x128+0x4]
        Anti-forensic stripes: 4000  [0x12c+0x4]
    ▾ Key slot 2 — disabled  [0x130+0x30]
        State: disabled (0xdead)  [0x130+0x4]
        PBKDF2 iterations: 0  [0x134+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x138+0x20]
        Key material offset (sectors): 1001 — at 0x7d200  [0x158+0x4]
        Anti-forensic stripes: 4000  [0x15c+0x4]
    ▾ Key slot 3 — disabled  [0x160+0x30]
        State: disabled (0xdead)  [0x160+0x4]
        PBKDF2 iterations: 0  [0x164+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x168+0x20]
        Key material offset (sectors): 1501 — at 0xbba00  [0x188+0x4]
        Anti-forensic stripes: 4000  [0x18c+0x4]
    ▾ Key slot 4 — disabled  [0x190+0x30]
        State: disabled (0xdead)  [0x190+0x4]
        PBKDF2 iterations: 0  [0x194+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x198+0x20]
        Key material offset (sectors): 2001 — at 0xfa200  [0x1b8+0x4]
        Anti-forensic stripes: 4000  [0x1bc+0x4]
    ▾ Key slot 5 — disabled  [0x1c0+0x30]
        State: disabled (0xdead)  [0x1c0+0x4]
        PBKDF2 iterations: 0  [0x1c4+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1c8+0x20]
        Key material offset (sectors): 2501 — at 0x138a00  [0x1e8+0x4]
        Anti-forensic stripes: 4000  [0x1ec+0x4]
    ▾ Key slot 6 — disabled  [0x1f0+0x30]
        State: disabled (0xdead)  [0x1f0+0x4]
        PBKDF2 iterations: 0  [0x1f4+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1f8+0x20]
        Key material offset (sectors): 3001 — at 0x177200  [0x218+0x4]
        Anti-forensic stripes: 4000  [0x21c+0x4]
    ▾ Key slot 7 — disabled  [0x220+0x30]
        State: disabled (0xdead)  [0x220+0x4]
        PBKDF2 iterations: 0  [0x224+0x4]
        Salt: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x228+0x20]
        Key material offset (sectors): 3501 — at 0x1b5a00  [0x248+0x4]
        Anti-forensic stripes: 4000  [0x24c+0x4]
  ▾ Volume layout — header, key material and payload  [0x0+0x1400]
      Header — 208 bytes  [0x0+0xd0]
      Key slots — 384 bytes  [0xd0+0x180]
      Key material — 4.4 KiB  [0x250+0x11b0]
    Encrypted payload — 1 KiB of aes-xts-plain64  [0x1000+0x400]
