tests/snapshots/formats__luks__luks2.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ luks2.img — LUKS2 encrypted volume "fixture", aes-xts-plain64, 1 keyslot, UUID 0f1e2d3c-4b5a-4968-8776-655443322110  [0x0+0x9200]
  ▾ Binary header — sequence 3, 16 KiB with the JSON area  [0x0+0x1000]
      ! warning: sha256 checksum mismatch [0x1c0+0x40]
      Magic: 4c 55 4b 53 ba be  |LUKS..|  [0x0+0x6]
      Version: 2  [0x6+0x2]
      Header size (binary + JSON): 16384 — 16 KiB  [0x8+0x8]
      Sequence id: 3  [0x10+0x8]
      Label: "fixture"  [0x18+0x30]
      Checksum algorithm: "sha256"  [0x48+0x20]
      Salt: 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f …  |................|  [0x68+0x40]
      UUID: "0f1e2d3c-4b5a-4968-8776-655443322110"  [0xa8+0x28]
      Subsystem: ""  [0xd0+0x30]
      Header offset: 0 — 0x0 from the start of the device  [0x100+0x8]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x108+0xb8]
      Checksum: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1c0+0x40]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x200+0xe00]
  ▾ JSON metadata — JSON object, 5 members  [0x1000+0x289]
    ▾ keyslots — object, 1 member  [0x100c+0x114]
      ▾ 0 — object, 5 members  [0x1011+0x10e]
          type: "luks2"  [0x1019+0x7]
          key_size: 64  [0x102c+0x2]
        ▾ af — object, 3 members  [0x1034+0x2f]
            type: "luks1"  [0x103c+0x7]
            stripes: 4000  [0x104e+0x4]
            hash: "sha256"  [0x105a+0x8]
        ▾ area — object, 5 members  [0x106b+0x5c]
            type: "raw"  [0x1073+0x5]
            offset: "32768"  [0x1082+0x7]
            size: "258048"  [0x1091+0x8]
            encryption: "aes-xts-plain64"  [0x10a7+0x11]
            key_size: 64  [0x10c4+0x2]
        ▾ kdf — object, 5 members  [0x10ce+0x50]
            type: "argon2id"  [0x10d6+0xa]
            time: 4  [0x10e8+0x1]
            memory: 1048576  [0x10f3+0x7]
            cpus: 4  [0x1102+0x1]
            salt: "c2FsdHNhbHRzYWx0"  [0x110b+0x12]
      tokens — object, 0 members  [0x112a+0x2]
    ▾ segments — object, 1 member  [0x1138+0x78]
      ▾ 0 — object, 6 members  [0x113d+0x72]
          type: "crypt"  [0x1145+0x7]
          offset: "36864"  [0x1156+0x7]
          size: "dynamic"  [0x1165+0x9]
          iv_tweak: "0"  [0x117a+0x3]
          encryption: "aes-xts-plain64"  [0x118b+0x11]
          sector_size: 512  [0x11ab+0x3]
    ▾ digests — object, 1 member  [0x11bb+0x93]
      ▾ 0 — object, 7 members  [0x11c0+0x8d]
          type: "pbkdf2"  [0x11c8+0x8]
        ▾ keyslots — array, 1 element  [0x11dc+0x5]
            [0]: "0"  [0x11dd+0x3]
        ▾ segments — array, 1 element  [0x11ed+0x5]
            [0]: "0"  [0x11ee+0x3]
          hash: "sha256"  [0x11fa+0x8]
          iterations: 100000  [0x1210+0x6]
          salt: "ZGlnZXN0c2FsdA=="  [0x121e+0x12]
          digest: "ZGlnZXN0ZGlnZXN0"  [0x123a+0x12]
    ▾ config — object, 2 members  [0x1258+0x30]
        json_size: "12288"  [0x1265+0x7]
        keyslots_size: "16744448"  [0x127d+0xa]
    JSON area padding — 11.4 KiB  [0x1289+0x2d77]
  ▾ Secondary binary header — sequence 3, 16 KiB with the JSON area  [0x4000+0x1000]
      ! warning: sha256 checksum mismatch [0x41c0+0x40]
      Magic: 53 4b 55 4c ba be  |SKUL..|  [0x4000+0x6]
      Version: 2  [0x4006+0x2]
      Header size (binary + JSON): 16384 — 16 KiB  [0x4008+0x8]
      Sequence id: 3  [0x4010+0x8]
      Label: "fixture"  [0x4018+0x30]
      Checksum algorithm: "sha256"  [0x4048+0x20]
      Salt: 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f …  |................|  [0x4068+0x40]
      UUID: "0f1e2d3c-4b5a-4968-8776-655443322110"  [0x40a8+0x28]
      Subsystem: ""  [0x40d0+0x30]
      Header offset: 16384 — 0x4000 from the start of the device  [0x4100+0x8]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4108+0xb8]
      Checksum: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x41c0+0x40]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4200+0xe00]
  ▾ Secondary JSON metadata — JSON object, 5 members  [0x5000+0x289]
    ▾ keyslots — object, 1 member  [0x500c+0x114]
      ▾ 0 — object, 5 members  [0x5011+0x10e]
          type: "luks2"  [0x5019+0x7]
          key_size: 64  [0x502c+0x2]
        ▾ af — object, 3 members  [0x5034+0x2f]
            type: "luks1"  [0x503c+0x7]
            stripes: 4000  [0x504e+0x4]
            hash: "sha256"  [0x505a+0x8]
        ▾ area — object, 5 members  [0x506b+0x5c]
            type: "raw"  [0x5073+0x5]
            offset: "32768"  [0x5082+0x7]
            size: "258048"  [0x5091+0x8]
            encryption: "aes-xts-plain64"  [0x50a7+0x11]
            key_size: 64  [0x50c4+0x2]
        ▾ kdf — object, 5 members  [0x50ce+0x50]
            type: "argon2id"  [0x50d6+0xa]
            time: 4  [0x50e8+0x1]
            memory: 1048576  [0x50f3+0x7]
            cpus: 4  [0x5102+0x1]
            salt: "c2FsdHNhbHRzYWx0"  [0x510b+0x12]
      tokens — object, 0 members  [0x512a+0x2]
    ▾ segments — object, 1 member  [0x5138+0x78]
      ▾ 0 — object, 6 members  [0x513d+0x72]
          type: "crypt"  [0x5145+0x7]
          offset: "36864"  [0x5156+0x7]
          size: "dynamic"  [0x5165+0x9]
          iv_tweak: "0"  [0x517a+0x3]
          encryption: "aes-xts-plain64"  [0x518b+0x11]
          sector_size: 512  [0x51ab+0x3]
    ▾ digests — object, 1 member  [0x51bb+0x93]
      ▾ 0 — object, 7 members  [0x51c0+0x8d]
          type: "pbkdf2"  [0x51c8+0x8]
        ▾ keyslots — array, 1 element  [0x51dc+0x5]
            [0]: "0"  [0x51dd+0x3]
        ▾ segments — array, 1 element  [0x51ed+0x5]
            [0]: "0"  [0x51ee+0x3]
          hash: "sha256"  [0x51fa+0x8]
          iterations: 100000  [0x5210+0x6]
          salt: "ZGlnZXN0c2FsdA=="  [0x521e+0x12]
          digest: "ZGlnZXN0ZGlnZXN0"  [0x523a+0x12]
    ▾ config — object, 2 members  [0x5258+0x30]
        json_size: "12288"  [0x5265+0x7]
        keyslots_size: "16744448"  [0x527d+0xa]
    Secondary JSON area padding — 11.4 KiB  [0x5289+0x2d77]
  ▾ Keyslots area — 1 keyslots in 4.5 KiB  [0x8000+0x1200]
    ▾ Keyslot 0 — 512-bit key, argon2id, AF 4000 stripes, area encrypted with aes-xts-plain64  [0x8000+0x1200]
        AF-split key material — 4.5 KiB, encrypted  [0x8000+0x1200]
    Encrypted payload — 512 bytes at 0x9000, aes-xts-plain64, 512-byte sectors  [0x9000+0x200]
